<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.FragmentDetails">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_in_details"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/details_photo_of_character"
                android:foreground="@drawable/gradient_foreground_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="10"
                tools:src="@drawable/example_image_fir_details" />

            <TextView
                android:id="@+id/Name_in_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_default"
                android:layout_gravity="bottom"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toTopOf="@+id/Status_in_details"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/Status_in_details"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/text_margin_default"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="40dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big_size"
                app:drawableLeftCompat="@drawable/white_circle"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_in_details"
                tools:layout_editor_absoluteX="16dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_in_details">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_default"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/text_margin_default"
                    android:text="@string/gender"
                    android:textColor="@color/dark_color_textView"
                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:text="@string/origin_in_details"

                    android:textColor="@color/dark_color_textView"
                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:text="@string/location_in_details"
                    android:textColor="@color/dark_color_textView"

                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:text="@string/type_in_details"
                    android:textColor="@color/dark_color_textView"

                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:text="@string/dimension_in_details"
                    android:textColor="@color/dark_color_textView"

                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:text="@string/episodes_in_details"
                    android:textColor="@color/dark_color_textView"

                    android:textSize="@dimen/text_big_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/text_margin_default"
                android:gravity="end"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/imageView_in_details">

                <TextView
                    android:id="@+id/textView_gender_in_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/text_margin_default"
                    android:layout_marginBottom="@dimen/text_margin_default"
                    android:singleLine="true"

                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:id="@+id/textView_origin_in_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:singleLine="true"
                    android:text=""

                    android:textColor="@color/white"
                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:id="@+id/textView_location_in_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/white"

                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:id="@+id/textView_type_in_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/white"

                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:id="@+id/textView_dimension_in_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/white"

                    android:textSize="@dimen/text_big_size" />

                <TextView
                    android:id="@+id/textView_episode_in_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_default"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/white"

                    android:textSize="@dimen/text_big_size" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/img_b"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_back_btn"
        android:contentDescription="@string/back_button"
        android:src="@drawable/img_state_btn_back_details" />


</FrameLayout>